[package]
name = "tsukuyomi"
version = "0.7.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tls-parser = "0.11"

# We use rcgen 0.13 to match the modern pki_types in rustls 0.23
rcgen = "0.13"
rsa = "0.9"
time = "0.3"

# --- THE QUANTUM ENGINE ---
# We enable the aws_lc_rs feature, which contains the ML-KEM/Kyber-768 algorithms.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "aws_lc_rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

bytes = "1"